modal z-index bug fixed

--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -24,7 +24,7 @@ $fade-delay:4000ms *$disable-animation;
     left: 0;
     position: fixed;
     width: 100%;
-    z-index: 5000;
+    z-index: 4;
     @media screen and (max-width:$break-l) {
         height: 226px;
     }
@@ -223,7 +223,7 @@ $fade-delay:4000ms *$disable-animation;
   width: 100%;
   height: 2px;
   background-color: $my-white;
-  z-index: 5000 !important;
+  z-index: 4 !important;
   border-radius: 2px;
 }
 .underline-nav-center{
@@ -238,7 +238,7 @@ $fade-delay:4000ms *$disable-animation;
   height: 3px;
   width: 90%;
   left: 5%;
-  z-index: 5000 !important;
+  z-index: 4 !important;
 
 }
 .navbar-sticky{
