--- a/src/styles.scss
+++ b/src/styles.scss
@@ -512,6 +512,12 @@ ul{
 .vh-100{
     height: 100vh
 }
+.overflow-hidden{
+    overflow: hidden;
+}
+.overflow-auto{
+    overflow: auto;
+}
 .smaller-font{
     font-size: 0.8em;
 }
